--- a/examples/labeling/point-labels.html
+++ b/examples/labeling/point-labels.html
@@ -64,15 +64,15 @@
 
       const layerUpdated = function () {
         const features = viz.variables.v_features.value;
-        const geojsonFeatures = features.map(f => {
+        const geojsonFeatures = features.map(feature => {
           return {
             "type": "Feature",
             "geometry": {
               "type": "Point",
-              "coordinates": f.getRenderedCentroid()
+              "coordinates": feature.getRenderedCentroid()
             },
             "properties": {
-              "label_field": `${f.properties['poi_name']}`,
+              "label_field": `${feature.properties['poi_name']}`,
             }
           }
         });
