--- a/examples/guides/add-widgets-advanced/step-3.html
+++ b/examples/guides/add-widgets-advanced/step-3.html
@@ -59,8 +59,7 @@
 
     // Define the visualization
     const viz = new carto.Viz(`
-      @v_viewportHistogram: viewportHistogram($diameter, [[0, 1], [1, 2], [2, 3], [3, 4], [4, 5], [5, 6]])
-      @v_sampleHistogram: sampleHistogram($diameter, [[0, 1], [1, 2], [2, 3], [3, 4], [4, 5], [5, 6]])
+      @v_histogram: viewportHistogram($diameter, [[0, 1], [1, 2], [2, 3], [3, 4], [4, 5], [5, 6]])
       color: #00718b
       width: 5
       strokeWidth: 0.5
@@ -72,7 +71,7 @@
         duration: 0
       },
       legend: {
-        display: true
+        display: false
       },
       scales: {
         yAxes: [{
@@ -84,8 +83,7 @@
             suggestedMin: 1,
             beginAtZero: true,
             display: false
-          },
-          stacked: false
+          }
         }],
         xAxes: [{
           gridLines: {
@@ -93,14 +91,10 @@
             display: false
           },
           ticks: {
-            display: true,
-            callback: function (value, index, values) {
-              return `[${value.join(', ')}]`;
-            }
+            display: false
           },
           barPercentage: 0.9,
-          categoryPercentage: 1.0,
-          stacked: true
+          categoryPercentage: 1.0
         }]
       }
     };
@@ -117,34 +111,21 @@
     layer.on('loaded', hideLoader);
 
     layer.on('updated', () => {
-      // Save histograms variable
-      const viewportHistogram = layer.viz.variables.v_viewportHistogram;
-      const sampleHistogram = layer.viz.variables.v_sampleHistogram;
-
-      // Get histograms data
-      const viewportHistogramData = viewportHistogram.value;
-      const sampleHistogramData = sampleHistogram.value;
-
+      // Save histogram variable
+      const histogram = layer.viz.variables.v_histogram;
+      // Get histogram data
+      const histogramData = histogram.value;
       // Chart.js set up
-      const labels = viewportHistogramData.map(elem => elem.x);
-      const viewportData = viewportHistogramData.map(elem => elem.y);
-      const globalData = sampleHistogramData.map(elem => elem.y);
-      const viewportColor = '#F2B701';
-      const globalColor = '#E73F74';
+      const labels = histogramData.map(elem => elem.x);
+      const data = histogramData.map(elem => elem.y);
+      const backgroundColor = '#00718b';
 
       chart.data = {
         labels,
-        datasets: [
-          {
-            label: 'Viewport',
-            data: viewportData,
-            backgroundColor: viewportColor
-          },
-          {
-            label: 'Global',
-            data: globalData,
-            backgroundColor: globalColor
-          }]
+        datasets: [{
+          data,
+          backgroundColor
+        }]
       };
 
       chart.update();
