--- a/examples/guides/build-custom-charts/step-4.html
+++ b/examples/guides/build-custom-charts/step-4.html
@@ -92,7 +92,10 @@
           },
           ticks: {
             display: true,
-            fontSize: 8
+            fontSize: 7,
+            autoSkip: false,
+            maxRotation: 0,
+            minRotation: 0
           },
           barPercentage: 0.9,
           categoryPercentage: 1.0
