--- a/examples/guides/build-custom-charts/step-6.html
+++ b/examples/guides/build-custom-charts/step-6.html
@@ -120,7 +120,7 @@
       const color = layer.viz.variables.v_color;
       // Get color ramp legend
       const legendOptions = {
-        othersLabel: 'Other species'
+        othersLabel: 'OTHER SPECIES'
       };
       const colorValues = color.getLegendData(legendOptions);
       // Get histogram data
