Update bar colors

--- a/examples/guides/build-custom-charts/step-1.html
+++ b/examples/guides/build-custom-charts/step-1.html
@@ -129,8 +129,8 @@
       const labels = viewportHistogramData.map(elem => elem.x);
       const viewportData = viewportHistogramData.map(elem => elem.y);
       const globalData = sampleHistogramData.map(elem => elem.y);
-      const viewportColor = 'rgba(1, 155, 155, 0.5)';
-      const globalColor = 'rgba(155, 1, 155, 0.5)';
+      const viewportColor = '#00718b';
+      const globalColor = '#F2B701';
 
       chart.data = {
         labels,
