--- a/examples/guides/build-custom-charts/step-2.html
+++ b/examples/guides/build-custom-charts/step-2.html
@@ -91,7 +91,11 @@
             display: false
           },
           ticks: {
-            display: false
+            display: true,
+            fontSize: 7,
+            autoSkip: false,
+            maxRotation: 0,
+            minRotation: 0
           },
           barPercentage: 0.9,
           categoryPercentage: 1.0
