--- a/examples/guides/build-custom-charts/step-4.html
+++ b/examples/guides/build-custom-charts/step-4.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Advanced Widgets | CARTO</title>
+  <title>Custom charts | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <script src="../../../dist/carto-vl.js"></script>
@@ -61,7 +61,7 @@
     const viz = new carto.Viz(`
       @v_histogram: viewportHistogram(top($species_name, 5))
       color: #00718b
-      width: 5
+      width: 3
       strokeWidth: 0.5
     `);
 
