--- a/examples/guides/build-custom-charts/step-5.html
+++ b/examples/guides/build-custom-charts/step-5.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-    <title>Advanced Widgets | CARTO</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <script src="../../../dist/carto-vl.js"></script>
-    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.js"></script>
-    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../../style.css">
-    <!-- Include Chart JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+  <title>Custom charts | CARTO</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <script src="../../../dist/carto-vl.js"></script>
+  <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.js"></script>
+  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="../../style.css">
+  <!-- Include Chart JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
   <aside class="toolbox chart-toolbox">
     <div class="box">
       <header>
-        <h1>Species</h1>
+        <h1>All Tree Species</h1>
       </header>
       <section>
         <canvas id="histogram" width="300" height="300"></canvas>
@@ -53,7 +53,7 @@
     });
 
     const ctx = document.getElementById('histogram').getContext('2d');
-    
+
     // Define the source
     const source = new carto.source.Dataset('vancouver_trees');
 
@@ -62,7 +62,7 @@
       @v_color: ramp($species_name, Vivid)
       @v_histogram: viewportHistogram($species_name)
       color: @v_color
-      width: 5
+      width: 3
       strokeWidth: 0
     `);
 
@@ -110,7 +110,7 @@
     layer.addTo(map, 'watername_ocean');
 
     layer.on('loaded', hideLoader);
-    
+
     layer.on('updated', () => {
       // Save histogram variable
       const histogram = layer.viz.variables.v_histogram;
