--- a/examples/guides/build-custom-charts/step-1.html
+++ b/examples/guides/build-custom-charts/step-1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Advanced Widgets | CARTO</title>
+  <title>Custom charts | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <script src="../../../dist/carto-vl.js"></script>
