--- a/examples/guides/build-custom-charts/step-2.html
+++ b/examples/guides/build-custom-charts/step-2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Advanced Widgets | CARTO</title>
+  <title>Custom charts | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <script src="../../../dist/carto-vl.js"></script>
@@ -18,7 +18,7 @@
   <aside class="toolbox chart-toolbox">
     <div class="box">
       <header>
-        <h1>Stree Side Name</h1>
+        <h1>Stree Side of Tree</h1>
       </header>
       <section>
         <canvas id="histogram" width="300" height="300"></canvas>
@@ -61,7 +61,7 @@
     const viz = new carto.Viz(`
       @v_histogram: viewportHistogram($street_side_name)
       color: #00718b
-      width: 5
+      width: 3
       strokeWidth: 0.5
     `);
 
