--- a/examples/guides/build-custom-charts/step-6.html
+++ b/examples/guides/build-custom-charts/step-6.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Advanced Widgets | CARTO</title>
+  <title>Custom charts | CARTO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <script src="../../../dist/carto-vl.js"></script>
@@ -63,7 +63,7 @@
       @v_color: ramp(@top_five, Vivid)
       @v_histogram: viewportHistogram(@top_five)
       color: @v_color
-      width: 5
+      width: 3
       strokeWidth: 0
     `);
 
