--- a/examples/guides/build-custom-charts/step-3.html
+++ b/examples/guides/build-custom-charts/step-3.html
@@ -91,7 +91,7 @@
             display: false
           },
           ticks: {
-            display: false,
+            display: true,
             callback: function (value, index, values) {
               return `[${value.join(', ')}]`;
             }
