--- a/examples/animation/animation-controls.html
+++ b/examples/animation/animation-controls.html
@@ -249,7 +249,7 @@
 
         const layer = new carto.Layer('layer', source, viz);
 
-        layer.addTo(map, 'watername_ocean');
+        layer.addTo(map);
 
         // Get HTML elements
         const $playbutton = document.getElementById('js-play-button');
