animate width example

--- a/examples/animation/animate-width.html
+++ b/examples/animation/animate-width.html
@@ -16,10 +16,10 @@
     <aside class="toolbox">
         <div class="box">
             <header>
-                <h1>Seattle Collisions</h1>
+                <h1>Number of People Invlovled in Collisions</h1>
             </header>
             <section>
-                <p class="description open-sans">Animate features over a date/time field</p>
+                <p class="description open-sans">Animate the width of features over time</p>
             </section>
             <footer class="js-footer"></footer>
         </div>
