Rename label in chart to add 'sample'

--- a/examples/guides/build-custom-charts/step-1.html
+++ b/examples/guides/build-custom-charts/step-1.html
@@ -141,7 +141,7 @@
             backgroundColor: viewportColor
           },
           {
-            label: 'Global',
+            label: 'Global sample',
             data: globalData,
             backgroundColor: globalColor
           }]
