--- a/examples/animation/animation-controls.html
+++ b/examples/animation/animation-controls.html
@@ -245,6 +245,8 @@
             @duration: 30
             @animation: animation($incdate,@duration,fade(1,1))
             filter: @animation
+            color: ramp(linear($incdate),sunset)
+            strokeWidth: 0
         `);
 
         const layer = new carto.Layer('layer', source, viz);
